# Robotic_soln

./: README.md
robotic_sensor/: CMakeLists.txt  package.xml
robotic_sensor/msg/: SensorData.msg  SensorDataPoints.msg
robotic_sensor/src/: sensor_client.cpp  sensor_service.cpp  sensor_service1.cpp
robotic_sensor/srv/: RoboticSensor.srv
